<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">教室預借</string>
    <string name="action_settings">Settings</string>
    <string name="account">帳號</string>
    <string name="password">密碼</string>
    <string name="login">登入</string>
    <string name="home">首頁</string>
    <string name="history">個人記錄</string>
    <string name="search">查詢與預借</string>
    <string name="logout">登出</string>
    <string name="return_string">返回</string>
    <string name="verified">已審核</string>
    <string name="unverified">未審核</string>
    <string name="record">歷史記錄</string>
    <string name="exit">離開</string>
    <string name="remember">記住密碼</string>
    
    <string name="using">使用中的教室</string>
    <string name="cancel_record">取消預約</string>
    <string name="cancel_tip">（請勾選要取消的預約時段）</string>

    <string name="pick_date">選擇日期</string>
	<string name="pick_time">TimePicker!</string>

	<string name="done">完成</string>
	<string name="cancel">重選</string>
	<string name="back">返回</string>
	<string name="reset">重填</string>
	
	<string name="classroomID">教室(ID)：</string>
	<string name="date_picked">借用日期：</string>
	<string name="time_picked">借用時段：</string>
	<string name="name">使用者姓名</string>
	<string name="phone">手機號碼</string>
	<string name="email">Email</string>
	<string name="reason">事由</string>
	
	<string name="teacher_name">老師姓名</string>
	<string name="lesson_name">上課名稱</string>
	
	<string name="color_tip">請選擇要預借的時段，綠色為無人預借、黃色為已有人預借在審核中、紅色為已有人預借成功。</string>
	<string name="flow_tip">請選擇完日期和時間再按完成！</string>
    <string name="date_tip">請選擇預借的時段，以 30 分為單位。</string>

</resources>
