<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/Phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/EditPhone"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/phone" />

    <EditText
        android:id="@+id/EditPhone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/Phone"
        android:ems="10"
        android:inputType="phone" />

    <TextView
        android:id="@+id/Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/EditEmail"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/EditPhone"
        android:layout_marginTop="15dp"
        android:text="@string/email" />

    <EditText
        android:id="@+id/EditEmail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/EditPhone"
        android:layout_toRightOf="@+id/Email"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/EditName"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/EditEmail"
        android:layout_marginTop="15dp"
        android:text="@string/name" />

    <EditText
        android:id="@+id/EditName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/EditEmail"
        android:layout_toRightOf="@+id/Name"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/SelectDate"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/EditName"
        android:text="@string/date_picked" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/SelectDate"
        android:layout_marginTop="36dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="106dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/SelectTime"
                android:layout_width="286dp"
                android:layout_height="77dp"
                android:text="@string/time_picked" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/ClassroomID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/scrollView1"
        android:text="@string/classroomID" />

    <Button
        android:id="@+id/reason"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ClassroomID"
        android:text="@string/reason" />

    <TextView
        android:id="@+id/reasonTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/reason"
        android:text="" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center" >

        <Button
            android:id="@+id/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done" />

        <Button
            android:id="@+id/rewrite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset" />
    </LinearLayout>

</RelativeLayout>